2010-09-02 Holger Vogt
 * randnumb.c: inproved comments

 2010-08-29 Holger Vogt
 * cmath2.c, randnumb.c, main.c, ngspice.h, configure.in, tclspice.c: 
   remove fcns random() and srandom(), only use rand() and srand() or
   internal random number generator.
 * mystring.c: replace Str() by SPICE_DSTRING  

2010-08-29 Dietmar Warning
 * fteext.h, parse.c, cmath2.c, cmath2.h,: 
   new function sunif(), uniform random generator usable in control blocks
 * examples/control_structs/MonteCarlo.sp: Simple example to perform MC runs
   in ngspice using uniform and gaussian distributions

2010-08-29  Holger Vogt
 * fteext.h, main.c, randnumb.c, parse.c, cmath2.c, cmath2.h: 
   new function sgauss(), new random number generator with very
   high run length

2010-08-19  Holger Vogt
 * xpressn.c: bug no. 3047884 fixed
   inp.c: prevent crash if .param is last line in input deck
 
2010-08-18  Holger Vogt
 * configure.in: add TCLCYG 
 * autogen.sh:  if --adms is selected, read the section from configure.in
   and store it in AC_CONFIG_FILES of temporary temp-adms.ac. 
   Testing for availability of awk
 Tested with MINGW, CYGWIN, SUSE Linux, may need more tests on other OSs!  

2010-08-17 Dietmar Warning
 * windisp.c, winprint.c, xspice/cm/cmexport.c: omit warnings

2010-08-15  Holger Vogt
 * configure.in: add a small section starting with *VLAMKF, containing
   the adms makefiles to be made 
 * autogen.sh:  if --adms is selected, read the section from configure.in
   and store it in AC_CONFIG_FILES of temporary configure.ac 
 Tested with MINGW, CYGWIN, SUSE Linux, may need more tests on other OSs!  

2010-08-15  Robert Larice
 * src/misc/string.c ,
 * src/xspice/cmpp/mod_yacc.y :
    chomp some warnings

2010-08-15  Robert Larice
 * src/include/jobdefs.h ,
 * src/include/tskdefs.h ,
 * src/include/typedefs.h :
    typedefs for JOB and TSKtask into "typedefs.h"

2010-08-15  Robert Larice
 * src/spicelib/parser/inp2dot.c :
    use the type CKTnode instead of void*
